test(actions,core): add JGiven BDD scenarios with AssertJ + AssertJ-Swing
- jhotdraw-actions/pom.xml, jhotdraw-core/pom.xml: jgiven-junit 1.3.1, assertj-core 3.24.2,
  assertj-swing-junit 3.17.1 (actions only); surefire argLine for ByteBuddy on Java 17+
- AutomaticSelectionBddTest: 6 BDD scenarios covering US-1 Select All and US-2 Deselect All
- SelectAllSwingBddTest: 1 AssertJ-Swing scenario driving SelectAllAction through a real
  JFrame; class-skipped on headless environments
- SelectSameBddTest: 4 BDD scenarios covering US-3 Select Same (best case + boundaries)
- Portfolio: BehaviorDrivenLab chapter added (user-story to GWT mapping, JGiven idioms,
  AssertJ usage, AssertJ-Swing automation, verification commands)